Sonar: Resterende issues fra initiell commit (#5)